<resources>
    <string name="app_name">GradProject</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="loading">LOADING</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="terms_and_conditions_and_privacy_policy">Terms and conditions and Privacy policy</string>
    <string name="by_continuing_i_confirm_that_i_have_read_and_agree_to_the">By continuing, I confirm that i have read and agree to the</string>
    <string name="Continue">CONTINUE</string>
    <string name="Confirm">Confirm</string>
    <string name="verificationMessage">We will send verification code to your mobile Right Now.</string>
    <string name="Send_OTP">Send OTP</string>
    <string name="Cancel">Cancel</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="four_digit_command">Enter the 4-digit code sent to you at</string>
    <string name="submit">SUBMIT</string>
    <string name="resend_code">Resend code</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Enter your New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_password_again">enter your password again</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit.</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="sign_in">Sign In</string>
    <string name="create_profile">Create profile</string>
    <string name="home_address">Home Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="swift_ifsc_code">Swift/IFSC Code</string>
    <string name="next">Next</string>
    <string name="personal_documents">Personal Documents</string>
    <string name="upload">UPLOAD</string>
    <string name="driving_licence">Driving Licence</string>
    <string name="passport">Passport</string>
    <string name="subscription_plans">Subscription Plans</string>
    <string name="sign_up">Sign Up</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="title_activity_maps">Map</string>
    <string name="birth_certificate">Identity Card</string>
    <string name="the_trial">The Trial</string>
    <string name="_1_free_ride">1 Free Ride</string>
    <string name="try_free">TRY FREE</string>
    <string name="classic_plan">Classic Plan</string>
    <string name="solid_cars_only">*Solid cars Only</string>
    <string name="up_to_5000_kilometres">*Up to 5000 Kilometres</string>
    <string name="one_ride_available_everyday">*One ride available Everyday</string>
    <string name="premium_plan">Premium Plan</string>
    <string name="up_to_3_rides_everyday">*Up to 3 rides Everyday</string>
    <string name="solid_convertible_and_suv_cars">*Solid, Convertible and SUV Cars</string>
    <string name="enterprise_plan">Enterprise Plan</string>
    <string name="up_to_5_rides_everday">*Up to 5 rides Everday</string>
    <string name="up_to_30000_kilometres">*Up to 30000 Kilometres</string>
    <string name="all_cars_types_available">*All Cars types Available</string>
    <string name="up_to_10000_kilometres">*Up to 10000 Kilometres</string>
    <string name="buy_at_egp7500_00">BUY AT EGP7500,00</string>
    <string name="buy_at_egp10000_00">BUY AT EGP10000,00</string>
    <string name="buy_at_egp15000_00">BUY AT EGP15000,00</string>
    <string name="_3_months">3 Months</string>
    <string name="_6_months">6 Months</string>
    <string name="_1_year">1 Year</string>
    <string name="help">Help</string>
    <string name="wallet">Wallet</string>
    <string name="home">Home</string>
    <string name="summary">Summary</string>
    <string name="my_subscription">My subscription</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>
