<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="60dp"
    android:paddingEnd="24dp"
    android:paddingBottom="30dp"
    tools:context=".ui.fragments.signUpFragments.BankDetailsFragment">

    <TextView
        android:id="@+id/BankDetails_Fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_details"
        android:textColor="@color/colorBlack"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Bank_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BankDetails_Fragment_title"
        android:layout_marginTop="24dp"
        android:alpha=".6"
        android:text="@string/bank_name"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/Bank_name_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/Bank_name_view"
        android:alpha=".5"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:inputType="text|textAutoCorrect|textAutoComplete|textCapCharacters"
        android:hint="Credit Agricole"/>

    <TextView
        android:id="@+id/AccountHolder_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Bank_name_editText"
        android:layout_marginTop="24dp"
        android:alpha=".6"
        android:text="@string/account_holder_name"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/last_name_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/AccountHolder_name_view"
        android:alpha=".5"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:hint="Mohamed Ahmed"/>

    <TextView
        android:id="@+id/Account_Number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name_editText"
        android:layout_marginTop="24dp"
        android:alpha=".6"
        android:text="@string/account_number"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/Account_Number_EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/Account_Number_view"
        android:alpha=".5"
        android:inputType="number"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:hint="ACNO123456789"/>


    <TextView
        android:id="@+id/Swift_code_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Account_Number_EditText"
        android:layout_marginTop="24dp"
        android:alpha=".6"
        android:text="@string/swift_ifsc_code"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/Swift_code_EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/Swift_code_view"
        android:alpha=".5"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:hint="YT1234"/>

    <TextView
        android:id="@+id/Command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Swift_code_EditText"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/by_continuing_i_confirm_that_i_have_read_and_agree_to_the"
        android:textColor="@color/colorGrey"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/Command_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Command"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/terms_and_conditions_and_privacy_policy"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/Command_two"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_button"
        android:text="@string/next"
        android:textColor="@color/colorwhite"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>