<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="60dp"
    android:paddingStart="30dp"
    android:paddingEnd="24dp"
    android:orientation="vertical"
    android:background="@color/colorwhite"
    tools:context=".ui.fragments.loginFragments.ResetPasswordFragment">

    <TextView
        android:id="@+id/reset_Fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="28sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/new_password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textStyle="normal"
        android:textSize="24sp"
        android:alpha=".7"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_Fragment_title"/>

    <EditText
        android:id="@+id/New_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_new_password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_view"/>

    <TextView
        android:id="@+id/confirm_password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textStyle="normal"
        android:textSize="24sp"
        android:alpha=".7"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/New_password_EditText"/>

    <EditText
        android:id="@+id/confirm_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_password_again"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_view"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/my_button"
        android:text="@string/reset"
        android:textColor="@color/colorwhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_EditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>